--- a/驿窗开源公约第二部分.md
+++ b/驿窗开源公约第二部分.md
@@ -1,6 +1,6 @@
 # 驿窗开源公约第二部分
 
-第二部分为预定义组合，以方便使用。目前已经预定义的组合，仅<span id='311'>311</span>条款这一个。
+第二部分为预定义组合，以方便使用。目前已经预定义的组合，仅<a href='#311'>311</a>条款这一个。
 
 ### **2. 驿窗开源公约的第二部分：权利条目组合预定义(300&500)→三位数字**
 
@@ -24,7 +24,7 @@
 >>308：未使用。  
 >>309：未使用。  
 >>310：未使用。  
->><a href='#311'>311</a>：使用6001、6002、6004、6007；7003、7005、7006、7008组合。  
+>><span id='311'>311</span>：使用6001、6002、6004、6007；7003、7005、7006、7008组合。  
 >>……  
 >>399：未使用。  
  
