--- a/驿窗开源公约第二部分.md
+++ b/驿窗开源公约第二部分.md
@@ -1,6 +1,6 @@
 # 驿窗开源公约第二部分
 
-第二部分为预定义组合，以方便使用。目前已经预定义的组合，仅<u><a href='#311'>311</a></u>条款这一个。
+第二部分为预定义组合，以方便使用。目前已经预定义的组合，仅<a href='#311'><u>311</u></a>条款这一个。
 
 ### **2. 驿窗开源公约的第二部分：权利条目组合预定义(300&500)→三位数字**
 
